--- a/Fuel-Front-End/src/app/hero_image/hero_image.component.html
+++ b/Fuel-Front-End/src/app/hero_image/hero_image.component.html
@@ -1,6 +1,6 @@
-<div class="hero-img container-fluild text-white text-center display-4">
+<div class="hero-img container-fluild text-white text-center">
   <p class="hero-heading-text">Welcome to <span id="glow_text">NNP</span></p>
-  <p class="hero-heading-text" style="padding-top: 15px; font-size: 1em;"><span class="fuel-text-animation">We Fuel</span>Innovation</p>
+  <p class="hero-heading-text" style="padding-top: 10px; font-size: 2.5em;"><span class="fuel-text-animation">We Fuel</span>Innovation</p>
   <button type="button" class="btn learn_more_btn">Learn More</button>
   <div class="row">
     <div class="col-sm-12 col-md-6 text-center">
@@ -13,15 +13,15 @@
           </tr>
           <tr>
             <td>Expedited Delivery</td>
-            <td> <img style="width: 60px; height: 40px;" src="assets/images/expedited_shipping.png" alt=""></td>
+            <td> <img style="width: 50px; height: 40px;" src="assets/images/expedited_shipping.png" alt=""></td>
           </tr>
           <tr>
             <td>Loyalty Discount</td>
-            <td> <img style="width: 60px; height: 50px;" src="assets/images/discount.png" alt=""></td>
+            <td> <img style="width: 50px; height: 50px;" src="assets/images/discount.png" alt=""></td>
           </tr>
           <tr>
             <td>24/7 Support</td>
-            <td> <img style="width: 60px; height: 50px;" src="assets/images/24_7_icon.png" alt=""></td>
+            <td> <img style="width: 50px; height: 50px;" src="assets/images/24_7_icon.png" alt=""></td>
           </tr>
         </tbody>
       </table>
