--- a/Fuel-Front-End/src/app/navbar/navbar.component.css
+++ b/Fuel-Front-End/src/app/navbar/navbar.component.css
@@ -1,11 +1,36 @@
-nav {
+.navbar-non-drop {
     background-color: black;
+    font-size: 15px;
+    height: 50px;
+}
+.navbar-drop {
+    background: black;
+    font-size: 15px;
+    height: 400px;
+    text-align: center;
 }
 /*NNP logo on navbar */
 #NNP_logo {
     width: 100px;
     height: 50px;
     mix-blend-mode: hard-light;
+}
+/*Navbar brand */
+#navbar_NNP_brand {
+-webkit-animation:colorchange_glow 10s infinite alternate;
+}
+@-webkit-keyframes colorchange_glow {
+    0% {
+      
+      color: white;
+    }
+    
+    50% {
+      
+      color: white;
+      text-shadow: 0 -1px 4px #FFF, 0 -2px 10px #ff0, 0 -10px 20px #ff8000, 0 -18px 40px #F00;
+    }
+
 }
 /* login_register component on navbar */
 #log_in_register{
