--- a/Fuel-Front-End/src/app/aboutUs/aboutUs.component.html
+++ b/Fuel-Front-End/src/app/aboutUs/aboutUs.component.html
@@ -1,9 +1,15 @@
 <div class="about-us-section container-fluid">
   <div class="NNP-company-logo">
     <img id="NNP-pic" src="assets/images/NNP_LOGO.png" alt="NNP_Logo_pic">
-  </div>
+</div>
+<div class="row">
   <div class="NNP-para mx-auto text-center p-3">
+    <p class="about-text mx-auto">About</p>
     <p>NNP was established by 3 founders: Cuong Phan, Thuy Nguyen, and Kim Nguyen in 2019. Fascinated by technological advances in 21st century, our founders saw an opportunity to revolutionize the oil industry by offering state-of-the-art solutions to fuel supply chain. 
       Since establishing, NNP has served over 2,000 regular customers across the United States and deliver approximately 100,000 gallons on time with the best value & quality. </p>
+  </div>
+</div>
+  <div>
+    <app-cards></app-cards>
   </div>
 </div>
