--- a/Fuel-Front-End/src/app/footer/footer.component.html
+++ b/Fuel-Front-End/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <div class="row footer-custom">
   <div class="col text-light text-center font-weight-light mt-1">
-    © 2020 NNP U.S.A. Inc. All rights reserved. NNP, the NNP Logo is registered trademarks of NNP Intellectual Property LLC.
+    © 2020 NNP U.S.A. Inc. All rights reserved. The NNP Logo is registered trademarks of NNP Intellectual Property LLC.
   </div>
 </div>
