--- a/Fuel-Front-End/src/app/cards/cards.component.html
+++ b/Fuel-Front-End/src/app/cards/cards.component.html
@@ -1,4 +1,6 @@
-<div class="row cards my-5 justify-content-center mx-auto">
+<div class="container-fluid cards">
+<div class="rows"><p id="our_team_text" class="mx-auto">Our Team</p></div>
+<div class="row my-2 justify-content-center mx-auto">
   <div class="col-md-4">
     <div class="flip-card">
       <div class="flip-card-inner">
@@ -56,4 +58,5 @@
         </div>
     </div>
   </div>
-  </div>
+</div> 
+</div>
