--- a/Fuel-Front-End/src/app/login/login.component.css
+++ b/Fuel-Front-End/src/app/login/login.component.css
@@ -1,3 +1,15 @@
+*{color:#fff;}
 .bg{
-    background: url('/Fuel-Front-End/src/assets/images/oil_company_background.jpg') no-repeat; width: 100%; height: 100vh;
+    background: url('/Fuel-Front-End/src/assets/images/oil.jpg'); 
+    background-repeat: no-repeat; 
+    background-size: auto;
+}
+.form-container{
+    border:0px solid #fff; 
+    padding:50px 60px;
+    margin-top:20vh;
+    margin-bottom: 30vh;
+    -webkit-box-shadow: -1px 4px 20px 11px rgba(0,0,0,0.75);
+    -moz-box-shadow: -1px 4px 20px 11px rgba(0,0,0,0.75);
+    box-shadow: -1px 4px 20px 11px rgba(0,0,0,0.75);
 }
