--- a/Fuel-Front-End/src/app/cards/cards.component.css
+++ b/Fuel-Front-End/src/app/cards/cards.component.css
@@ -9,6 +9,9 @@
     height: 300px;
     perspective: 1000px;
     padding: 30px;
+    -webkit-box-shadow: -1px 4px 20px 11px rgba(0,0,0,0.75);
+    -moz-box-shadow: -1px 4px 20px 11px rgba(0,0,0,0.75);
+    box-shadow: -1px 4px 20px 11px rgba(0,0,0,0.75);
   }
   
   .flip-card-inner {
