--- a/Fuel-Front-End/src/app/home_page/home_page.component.css
+++ b/Fuel-Front-End/src/app/home_page/home_page.component.css
@@ -3,7 +3,7 @@
     width: 100%;
     height: 100%;
     /*linear-gradient background color to make it darker */
-    background: linear-gradient(rgba(0, 0, 0, 0.2)), url(/assets/images/0.jpeg);
+    background: linear-gradient(rgba(0, 0, 0, 0.2)), url(/assets/images/home_background.jpeg);
     /*Scale image nicely */
     background-position: center;
     background-repeat: no-repeat;
