--- a/Fuel-Front-End/src/app/login/login.component.css
+++ b/Fuel-Front-End/src/app/login/login.component.css
@@ -1,8 +1,10 @@
 *{color:#fff;}
 .bg{
-    background: url('/Fuel-Front-End/src/assets/images/oil.jpg'); 
+    background: url('/assets/images/login_background.jpg'); 
     background-repeat: no-repeat; 
     background-size: auto;
+    width: 100%;
+    height: 100%;
 }
 .form-container{
     border:0px solid #fff; 
