--- a/Fuel-Front-End/src/app/login/login.component.html
+++ b/Fuel-Front-End/src/app/login/login.component.html
@@ -1,5 +1,4 @@
-<h1>Welcome back</h1>
-
+<p style="font-size: 2.5em; padding-top: 50px;">Welcome back</p>
 <div class="container-fluid">
     <div class="row">
       <div class="col-md-4 col-sm-4 col-xs-12"></div>
