--- a/Fuel-Front-End/src/app/home_page/home_page.component.html
+++ b/Fuel-Front-End/src/app/home_page/home_page.component.html
@@ -6,4 +6,5 @@
 <app-login *ngIf="isCollapsed"></app-login>
 <!-- show about page if isAbout is true-->
 <app-aboutUs *ngIf="isAbout"></app-aboutUs>
+<app-registration *ngIf="isRegister"></app-registration>
 </div>
