--- a/Fuel-Front-End/src/app/navbar/navbar.component.html
+++ b/Fuel-Front-End/src/app/navbar/navbar.component.html
@@ -15,7 +15,7 @@
               <a (click)="loginCollapsed()" class="nav-link m-2 menu-item" href="#projects">Login</a>
             </li>
             <li class="nav-item px-5">
-              <a class="nav-link m-2 menu-item" href="#gallery">Register</a>
+              <a (click)="registerPage()"class="nav-link m-2 menu-item" href="#gallery">Register</a>
             </li>
           </ul>
           <ul class="navbar-nav ml-auto">
