update-logo-and-register-page

--- a/Fuel-Front-End/src/app/login/login.component.html
+++ b/Fuel-Front-End/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<p style="font-size: 2.5em; padding-top: 50px;">Welcome back</p>
+<p style="font-size: 4em; padding-top: 50px;"><b>Welcome back</b></p>
 <div class="container-fluid">
     <div class="row">
       <div class="col-md-4 col-sm-4 col-xs-12"></div>
