--- a/Fuel-Front-End/src/app/registration/registration.component.html
+++ b/Fuel-Front-End/src/app/registration/registration.component.html
@@ -1,4 +1,5 @@
-<h1>Welcome back</h1>
+
+<p style="font-size: 2.5em; padding-top: 50px;"><b>Welcome to NNP</b></p>
 
 <div class="container-fluid">
     <div class="row">
@@ -6,15 +7,22 @@
       <div class="col-md-4 col-sm-4 col-xs-12">
         <!--form -->
         <form class = "form-container">
-        <h1>Login</h1>
+        <h1>Signup</h1>
           <div class="form-group">
-            <label for="exampleInputEmail1">Email</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+            <label for="email-signup">Email</label>
+            <input type="email" class="form-control" id="email-signup" placeholder="Email">
           </div>
+
           <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
-            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+            <label for="password-signup">Password</label>
+            <input type="password" class="form-control" id="password-signup" placeholder="Password">
           </div>
+
+          <div class="form-group">
+            <label for="password-confirm">Confirm password</label>
+            <input type="password" class="form-control" id="password-confirm" placeholder="Password">
+          </div>
+
           <div class="checkbox">
             <label>
               <input type="checkbox"> Remember me
