--- a/Fuel-Front-End/src/app/navbar/navbar.component.html
+++ b/Fuel-Front-End/src/app/navbar/navbar.component.html
@@ -1,5 +1,7 @@
 <nav class="navbar navbar-non-drop navbar-expand-lg navbar-dark" [ngClass]="{'navbar-drop': navbarOpen}">
-    <a id ="navbar_NNP_brand" class="navbar-brand" href="#">NNP</a>
+    <a id ="navbar_NNP_brand" class="navbar-brand" href="#">
+      <img src="/assets/images/NNP_LOGO.png" width="70" height="70">
+    </a>
     <button class="navbar-toggler" type="button" (click)="toggleNavbar()">
       <span class="navbar-toggler-icon"></span>
     </button>
