--- a/Fuel-Front-End/src/app/login/login.component.html
+++ b/Fuel-Front-End/src/app/login/login.component.html
@@ -1,4 +1,5 @@
-<p style="font-size: 4em; padding-top: 50px;"><b>Welcome back</b></p>
+<img src="/assets/images/NNP_LOGO.png">
+<p style="font-size: 2.5em; padding-top: 10px;"><b>Welcome back</b></p>
 <div class="container-fluid">
     <div class="row">
       <div class="col-md-4 col-sm-4 col-xs-12"></div>
