--- a/Fuel-Front-End/src/app/registration/registration.component.html
+++ b/Fuel-Front-End/src/app/registration/registration.component.html
@@ -1,5 +1,5 @@
-
-<p style="font-size: 2.5em; padding-top: 50px;"><b>Welcome to NNP</b></p>
+<img src="/assets/images/NNP_LOGO.png">
+<p style="font-size: 2.5em; padding-top: 5px;"><b>Welcome to NNP</b></p>
 
 <div class="container-fluid">
     <div class="row">
