--- a/Fuel-Front-End/src/app/login/login.component.html
+++ b/Fuel-Front-End/src/app/login/login.component.html
@@ -8,8 +8,8 @@
         <form class = "form-container">
         <h1>Login</h1>
           <div class="form-group">
-            <label for="exampleInputEmail1">Email</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+            <label for="exampleInputEmail1">Username</label>
+            <input type="text" name="username" class="form-control" id="exampleInputEmail1" placeholder="Username">
           </div>
           <div class="form-group">
             <label for="exampleInputPassword1">Password</label>
