--- a/Fuel-Front-End/src/app/registration/registration.component.html
+++ b/Fuel-Front-End/src/app/registration/registration.component.html
@@ -9,8 +9,8 @@
         <form class = "form-container">
         <h1>Signup</h1>
           <div class="form-group">
-            <label for="email-signup">Email</label>
-            <input type="email" class="form-control" id="email-signup" placeholder="Email">
+            <label for="email-signup">Username</label>
+            <input type="text" class="form-control" id="email-signup" placeholder="Username">
           </div>
 
           <div class="form-group">
