Submit-button-color-change

--- a/Fuel-Front-End/src/app/registration/registration.component.html
+++ b/Fuel-Front-End/src/app/registration/registration.component.html
@@ -28,7 +28,7 @@
               <input type="checkbox"> Remember me
             </label>
           </div>
-          <button type="submit" class="btn btn-success btn-block">Submit</button>
+          <button type="submit" class="btn btn-info btn-block">Submit</button>
         </form>
         <!--form -->
       </div>
