--- a/Fuel-Front-End/src/app/login/login.component.html
+++ b/Fuel-Front-End/src/app/login/login.component.html
@@ -20,7 +20,7 @@
               <input type="checkbox"> Remember me
             </label>
           </div>
-          <button type="submit" class="btn btn-success btn-block">Submit</button>
+          <button type="submit" class="btn btn-info btn-block">Submit</button>
         </form>
         <!--form -->
       </div>
