contact-us-added

--- a/Fuel-Front-End/src/app/home_page/home_page.component.html
+++ b/Fuel-Front-End/src/app/home_page/home_page.component.html
@@ -7,4 +7,5 @@
 <!-- show about page if isAbout is true-->
 <app-aboutUs *ngIf="isAbout"></app-aboutUs>
 <app-registration *ngIf="isRegister"></app-registration>
+<app-contactUs *ngIf="isContact"></app-contactUs>
 </div>
