--- a/Fuel-Front-End/src/app/navbar/navbar.component.html
+++ b/Fuel-Front-End/src/app/navbar/navbar.component.html
@@ -22,7 +22,7 @@
           </ul>
           <ul class="navbar-nav ml-auto">
             <li class="nav-item px-5 py-2">
-                <a class="nav-link m-2 menu-item" href="#contact">Contact Us</a>
+                <a (click)="contactPage()"class="nav-link m-2 menu-item" href="#contact">Contact Us</a>
               </li>
             <li class="nav-item px-5 py-3">
               <a href="#"><i class="nav-link icon-header navbar-brand fa fa-phone-square fa-2x"></i></a>
