--- a/Fuel-Front-End/src/app/home_page/home_page.component.html
+++ b/Fuel-Front-End/src/app/home_page/home_page.component.html
@@ -8,4 +8,5 @@
 <app-aboutUs *ngIf="isAbout"></app-aboutUs>
 <app-registration *ngIf="isRegister"></app-registration>
 <app-contactUs *ngIf="isContact"></app-contactUs>
+<app-profile *ngIf="isProfile"></app-profile>
 </div>
