--- a/Fuel-Front-End/src/app/navbar/navbar.component.html
+++ b/Fuel-Front-End/src/app/navbar/navbar.component.html
@@ -19,16 +19,21 @@
             <li class="nav-item px-5">
               <a (click)="registerPage()"class="nav-link m-2 menu-item" href="#gallery">Register</a>
             </li>
+            <li class="nav-item px-5">
+              <a (click)="profilePage()"class="nav-link m-2 menu-item" href="#proflie">Profile</a>
+            </li>
           </ul>
           <ul class="navbar-nav ml-auto">
             <li class="nav-item px-5 py-2">
                 <a (click)="contactPage()"class="nav-link m-2 menu-item" href="#contact">Contact Us</a>
               </li>
             <li class="nav-item px-5 py-3">
+              
               <a href="#"><i class="nav-link icon-header navbar-brand fa fa-phone-square fa-2x"></i></a>
               <a href="#"><i class="nav-link icon-header navbar-brand fa fa-facebook fa-2x"></i></a>
               <a href="#"><i class="nav-link icon-header navbar-brand fa fa-twitter-square fa-2x"></i></a>
               <a href="#"><i class="nav-link icon-header navbar-brand fa fa-linkedin fa-2x"></i></a>
+              <a (click)="profilePage()" href="#"><img src="/assets/images/pro5.png" width="40" height="40"></a>
             </li>
           </ul>
     </div>
