updated client profile page

--- a/Fuel-Front-End/src/app/profile/profile.component.html
+++ b/Fuel-Front-End/src/app/profile/profile.component.html
@@ -1,46 +1,19 @@
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<!------ Include the above in your HEAD tag ---------->
-
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<!------ Include the above in your HEAD tag ---------->
-
-<head>
-  <title>Bootstrap Example</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-</head>
-
-
-
-<div class="container bootstrap snippet">
+<div class="container">
     <div class="row">
-  		<div class="col-sm-10"><h1>User name</h1></div>
-    	<div class="col-sm-2"><a href="/users" class="pull-right"><img title="profile image" class="img-circle img-responsive" src="http://www.gravatar.com/avatar/28fd20ccec6865e2d5f0e1f4446eb7bf?s=100"></a></div>
+  		<div class="col-sm-10"><h1>Thuy Nguyen</h1></div>
+    	<div class="col-sm-2"><img style="border-radius: 50%; height: 70px; width: 70px;" src="assets/images/user_icon.jpeg"></div>
     </div>
     <div class="row">
   		<div class="col-sm-3"><!--left col-->
-              
-
       <div class="text-center">
         <img src="http://ssl.gstatic.com/accounts/ui/avatar_2x.png" class="avatar img-circle img-thumbnail" alt="avatar">
         <h6>Upload a different photo...</h6>
         <input type="file" class="text-center center-block file-upload">
       </div>><br>
-
-               
           <div class="panel panel-default">
             <div class="panel-heading">Website <i class="fa fa-link fa-1x"></i></div>
             <div class="panel-body"><a href="http://bootnipets.com">bootnipets.com</a></div>
           </div>
-          
-          
           <ul class="list-group">
             <li class="list-group-item text-muted">Activity <i class="fa fa-dashboard fa-1x"></i></li>
             <li class="list-group-item text-right"><span class="pull-left"><strong>Shares</strong></span> 125</li>
@@ -55,7 +28,6 @@
             	<i class="fa fa-facebook fa-2x"></i> <i class="fa fa-github fa-2x"></i> <i class="fa fa-twitter fa-2x"></i> <i class="fa fa-pinterest fa-2x"></i> <i class="fa fa-google-plus fa-2x"></i>
             </div>
           </div>
-          
         </div><!--/col-3-->
     	<div class="col-sm-9">
             <ul class="nav nav-tabs">
@@ -63,8 +35,6 @@
                 <li><a data-toggle="tab" href="#messages">Menu 1</a></li>
                 <li><a data-toggle="tab" href="#settings">Menu 2</a></li>
               </ul>
-
-              
           <div class="tab-content">
             <div class="tab-pane active" id="home">
                 <hr>
@@ -212,8 +182,6 @@
                
              </div><!--/tab-pane-->
              <div class="tab-pane" id="settings">
-            		
-               	
                   <hr>
                   <form class="form" action="##" method="post" id="registrationForm">
                       <div class="form-group">
