--- a/Fuel-Front-End/src/app/cards/cards.component.html
+++ b/Fuel-Front-End/src/app/cards/cards.component.html
@@ -26,7 +26,7 @@
       <div class="flip-card-inner">
         <div class="flip-card-front">
           <div class="py-3">
-          <img class="profile-img" src="assets/images/k_n_avatar.large" alt="Avatar">
+          <img class="profile-img" src="assets/images/kn.jpeg" alt="Avatar">
           <p class="pt-3" style="font-size: 25px;">Kim Nguyen</p>
           <p>Co-Founder</p>
           <p>Product Manager</p>
@@ -34,7 +34,7 @@
         </div>
         <div class="flip-card-back">
           <p>Kim Nguyen is a senior Computer Scientist from University of Houston</p>
-          <p>He manages our delivery & supply chain system, negotiate with our partners 
+          <p>He manages our delivery & supply chain system, negotiate with our partners
             for the best fuel & prices to ensure customers satisfaction</p>
         </div>
       </div>
@@ -58,5 +58,5 @@
         </div>
     </div>
   </div>
-</div> 
+</div>
 </div>
