--- a/Fuel-Front-End/src/app/contactUs/contactUs.component.html
+++ b/Fuel-Front-End/src/app/contactUs/contactUs.component.html
@@ -21,7 +21,7 @@
           <input type="email" class="form-control" placeholder="EMAIL">
         </div>
         <div class="form-group">
-          <textarea name="message" class="form-control"></textarea>
+          <textarea name="message" class="form-control" placeholder="MESSAGE"></textarea>
         </div>
         <button type="submit" class="btn get_in_touch_btn">Get In Touch</button>
       </form>
@@ -30,25 +30,27 @@
       <div class="col-md-3 col-sm-3 col-xs-12">
 
         <ul class="contact-list">
-          <li class="list-item"><i class="fa fa-map-marker fa-2x"><span class="contact-text place">Seattle | WA</span></i></li>
-          
-          <li class="list-item"><i class="fa fa-phone fa-2x"><span class="contact-text phone"><a href="tel:1-212-555-5555" title="Give me a call">(212) 555-2368</a></span></i></li>
-          
-          <li class="list-item"><i class="fa fa-envelope fa-2x"><span class="contact-text gmail"><a href="mailto:#" title="Send me an email">emailme@gmail.com</a></span></i></li>          
+          <li class="list-item"><i class="fa fa-map-marker fa-2x"><span class="contact-text place"> Seattle | WA</span></i></li>
+
+          <li class="list-item"><i class="fa fa-phone fa-2x"><span class="contact-text phone"><a href="tel:1-212-555-5555" title="Give me a call"> (212) 555-2368</a></span></i></li>
+
+          <li class="list-item"><i class="fa fa-envelope fa-2x"><span class="contact-text gmail"><a href="mailto:#" title="Send me an email"> emailUs@gmail.com</a></span></i></li>
         </ul>
         <hr>
         <ul class="social-media-list">
-          <li><a href="#" target="_blank" class="contact-icon">
-            <i class="fa fa-github" aria-hidden="true"></i></a>
-          </li>
-          <li><a href="#" target="_blank" class="contact-icon">
-            <i class="fa fa-twitter" aria-hidden="true"></i></a>
-          </li>
-          <li><a href="#" target="_blank" class="contact-icon">
-            <i class="fa fa-instagram" aria-hidden="true"></i></a>
-          </li>
-          <li><a href="#" target="_blank" class="contact-icon">
-            <i class="fa fa-codepen" aria-hidden="true"></i></a>
+          <li>
+            <a href="#" target="_blank" class="contact-icon">
+              <i class="fa fa-github px-3 fa-2x" aria-hidden="true"></i>
+            </a>
+            <a href="#" target="_blank" class="contact-icon">
+              <i class="fa fa-twitter px-3 fa-2x" aria-hidden="true"></i>
+            </a>
+            <a href="#" target="_blank" class="contact-icon">
+              <i class="fa fa-instagram px-3 fa-2x" aria-hidden="true"></i>
+            </a>
+            <a href="#" target="_blank" class="contact-icon">
+              <i class="fa fa-codepen px-3 fa-2x" aria-hidden="true"></i>
+            </a>
           </li>
         </ul>
         <hr>
