updated form client profile

--- a/Fuel-Front-End/src/app/profile/profile.component.html
+++ b/Fuel-Front-End/src/app/profile/profile.component.html
@@ -33,16 +33,16 @@
           <div class="tab-content">
             <div class="tab-pane active" id="home">
                 <hr>
-                  <form class="form" action="##" method="post" id="registrationForm">
+                  <form id="client_form" class="form" action="##" method="post">
                       <div class="form-group">
                           <div class="row">
                           <div class="col-6">
                               <label for="first_name"><h4>First name</h4></label>
-                              <input type="text" class="form-control" name="first_name" id="first_name" placeholder="first name" title="enter your first name if any.">
+                              <input type="text" class="form-control" name="first_name" id="first_name" placeholder="First name" title="enter your first name if any.">
                           </div>
                           <div class="col-6">
                             <label for="last_name"><h4>Last name</h4></label>
-                              <input type="text" class="form-control" name="last_name" id="last_name" placeholder="last name" title="enter your last name if any.">
+                              <input type="text" class="form-control" name="last_name" id="last_name" placeholder="Last name" title="enter your last name if any.">
                           </div>
                           </div>
                       </div>
@@ -50,7 +50,7 @@
                           <div class="row">
                           <div class="col-12">
                               <label for="phone"><h4>Address 1</h4></label>
-                              <input type="text" class="form-control" name="phone" id="phone" placeholder="enter your address" title="enter your address.">
+                              <input type="text" class="form-control" name="phone" id="phone" placeholder="Enter your address" title="enter your address.">
                           </div>
                           </div>
                       </div>
@@ -59,7 +59,7 @@
                         <div class="row">
                         <div class="col-12">
                             <label for="phone"><h4>Address 2</h4></label>
-                            <input type="text" class="form-control" name="phone" id="phone" placeholder="enter your second address (if any)" title="enter your address.">
+                            <input type="text" class="form-control" name="phone" id="phone" placeholder="Enter your second address (if any)" title="enter your address.">
                         </div>
                         </div>
                     </div>
@@ -71,7 +71,7 @@
                         </div>
                         <div class="col-4">
                             <label for="state"><h4>State</h4></label>
-                            <select name="state" id="state">
+                            <select style="height: 38px;" name="state" id="state">
                                 <option value="" selected="selected">Select a State</option>
                                 <option value="AL">Alabama</option>
                                 <option value="AK">Alaska</option>
@@ -128,7 +128,7 @@
                         </div>
                         <div class="col-4">
                             <label for="last_name"><h4>Zipcode</h4></label>
-                              <input type="text" class="form-control" name="last_name" id="last_name" placeholder="zipcode" title="enter your last name if any.">
+                              <input type="text" class="form-control" name="last_name" id="last_name" placeholder="Zipcode" title="enter your last name if any.">
                           </div>
                         </div>
                     </div>
