--- a/Fuel-Front-End/src/app/contactUs/contactUs.component.html
+++ b/Fuel-Front-End/src/app/contactUs/contactUs.component.html
@@ -34,23 +34,15 @@
 
           <li class="list-item"><i class="fa fa-phone fa-2x"><span class="contact-text phone"><a href="tel:1-212-555-5555" title="Give me a call"> (212) 555-2368</a></span></i></li>
 
-          <li class="list-item"><i class="fa fa-envelope fa-2x"><span class="contact-text gmail"><a href="mailto:#" title="Send me an email"> emailUs@gmail.com</a></span></i></li>
+          <li class="list-item"><i class="fa fa-envelope fa-2x"><span class="contact-text gmail"><a href="mailto:#" title="Send me an email"> EmailUs@gmail.com</a></span></i></li>
         </ul>
         <hr>
         <ul class="social-media-list">
           <li>
-            <a href="#" target="_blank" class="contact-icon">
-              <i class="fa fa-github px-3 fa-2x" aria-hidden="true"></i>
-            </a>
-            <a href="#" target="_blank" class="contact-icon">
-              <i class="fa fa-twitter px-3 fa-2x" aria-hidden="true"></i>
-            </a>
-            <a href="#" target="_blank" class="contact-icon">
-              <i class="fa fa-instagram px-3 fa-2x" aria-hidden="true"></i>
-            </a>
-            <a href="#" target="_blank" class="contact-icon">
-              <i class="fa fa-codepen px-3 fa-2x" aria-hidden="true"></i>
-            </a>
+            <a href="#" target="_blank" class="contact-icon"><i class="fa fa-github px-3 fa-2x" aria-hidden="true"></i></a>
+            <a href="#" target="_blank" class="contact-icon"><i class="fa fa-twitter px-3 fa-2x" aria-hidden="true"></i></a>
+            <a href="#" target="_blank" class="contact-icon"><i class="fa fa-instagram px-3 fa-2x" aria-hidden="true"></i></a>
+            <a href="#" target="_blank" class="contact-icon"><i class="fa fa-codepen px-3 fa-2x" aria-hidden="true"></i></a>
           </li>
         </ul>
         <hr>
