quote forn added

--- a/Fuel-Front-End/src/app/home_page/home_page.component.html
+++ b/Fuel-Front-End/src/app/home_page/home_page.component.html
@@ -9,4 +9,5 @@
 <app-registration *ngIf="isRegister"></app-registration>
 <app-contactUs *ngIf="isContact"></app-contactUs>
 <app-profile *ngIf="isProfile"></app-profile>
+<app-quotesPage *ngIf="isQuote"></app-quotesPage>
 </div>
