--- a/Fuel-Front-End/src/app/profile/profile.component.html
+++ b/Fuel-Front-End/src/app/profile/profile.component.html
@@ -25,7 +25,7 @@
           <div class="panel panel-default">
             <div class="panel-heading">Social Media</div>
             <div class="panel-body">
-            	<i class="fa fa-facebook fa-2x"></i> <i class="fa fa-github fa-2x"></i> <i class="fa fa-twitter fa-2x"></i> <i class="fa fa-pinterest fa-2x"></i> <i class="fa fa-google-plus fa-2x"></i>
+            	<i class="fa fa-facebook fa-2x px-2"></i> <i class="fa fa-github fa-2x px-2"></i> <i class="fa fa-twitter fa-2x px-2"></i> <i class="fa fa-pinterest fa-2x px-2"></i> <i class="fa fa-google-plus fa-2x px-2"></i>
             </div>
           </div>
         </div><!--/col-3-->
