--- a/Fuel-Front-End/src/app/profile/profile.component.css
+++ b/Fuel-Front-End/src/app/profile/profile.component.css
@@ -1,9 +1,9 @@
 #client_form
 {
     border:0px solid #fff; 
-    padding:50px 60px;
-    margin-top:1vh;
-    margin-bottom: 18vh;
+    padding: 60px;
+    margin-top: 0vh;
+    margin-bottom: 30px;
     -webkit-box-shadow: -1px 4px 20px 11px rgba(0,0,0,0.75);
     -moz-box-shadow: -1px 4px 20px 11px rgba(0,0,0,0.75);
     box-shadow: -1px 4px 20px 11px rgba(0,0,0,0.75);
